# bci_aic3

./: .gitignore  LICENSE  README.md  pyproject.toml
best/MI/: atcnet-mi-best-f1-val_f1=0.7494-epoch=62.ckpt  eegnet-mi-best-val_loss=0.6524-val_f1=0.4792-epoch=63.ckpt
best/SSVEP/: eegnet-ssvep-best-f1-val_f1=0.7832-epoch=30.ckpt
checkpoints/MI/: eegnet-mi-best-f1-epoch=00-val_f1=0.0000-v1.ckpt  eegnet-mi-best-f1-epoch=00-val_f1=0.0000.ckpt  eegnet-mi-best-f1-epoch=00-val_f1=0.5192-v1.ckpt  eegnet-mi-best-f1-epoch=00-val_f1=0.5192-v2.ckpt  eegnet-mi-best-f1-epoch=00-val_f1=0.5192.ckpt  eegnet-mi-best-f1-epoch=01-val_f1=0.0000.ckpt  eegnet-mi-best-f1-epoch=02-val_f1=0.0000.ckpt  eegnet-mi-best-f1-epoch=04-val_f1=0.5192.ckpt  eegnet-mi-best-f1-epoch=05-val_f1=0.5192.ckpt  eegnet-mi-best-f1-val_f1=0.4167-epoch=00-v1.ckpt  eegnet-mi-best-f1-val_f1=0.4167-epoch=00.ckpt  eegnet-mi-best-f1-val_f1=0.4318-epoch=00-v1.ckpt  eegnet-mi-best-f1-val_f1=0.4318-epoch=00-v2.ckpt  eegnet-mi-best-f1-val_f1=0.4318-epoch=00.ckpt  eegnet-mi-best-f1-val_f1=0.4545-epoch=03.ckpt  eegnet-mi-best-f1-val_f1=0.4663-epoch=04.ckpt  eegnet-mi-best-f1-val_f1=0.4724-epoch=01.ckpt  (+23 more)
configs/: basic_config.yaml  mi_config.yaml  ssvep_config.yaml
models/: mi_model_simple_cnn.pth  ssvep_model_simple_cnn.pth
notebooks/: Artifact_removal.ipynb  Artifact_removal_manual.ipynb  LDA_baseline.ipynb  aic3_test1_messy.ipynb  clean_notebook_mi.ipynb  clean_notebook_ssvep.ipynb  data_preprocessing.ipynb  lightning_trainer.ipynb  preprocessing_notebook.html  preprocessing_notebook.ipynb  preprocessing_pipeline.ipynb  simple_cnn_training_both.ipynb  testing_imports.ipynb  yet_another_messy_notebook.ipynb
scripts/: make_labels.py  preprocess_data.py
training_stats/: mi_stats.pt  mi_train.pt  ssvep_stats.pt  test_pipeline.pkl  train_pipeline.pkl
(+76 files in other folders)
