[project]
name = "bci-aic3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mne>=1.9.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pytorch-lightning>=2.5.1.post0",
    "ruff>=0.11.13",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torcheval>=0.0.7",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.7.3",
    "tqdm>=4.67.1",
]
