[project]
name = "bci-aic3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "mne>=1.9.0",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pytorch-lightning>=2.5.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.10.1",
    "torch>=2.7.1",
    "torch-scatter",
    "torcheeg>=1.1.3",
    "torchmetrics>=1.7.3",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
]
